# yt-zettlr

./: .gitignore  README.md  pyproject.toml
scripts/: main_captios.py  main_zttlr.py
src/: extraction.py  llm_engine_utils.py  prompts.py  zttlr.py
tests/: test_main_zttlr.py
