[project]
name = "queen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mistral-common>=1.10.0",
    "openai>=2.30.0",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "ruff>=0.15.9",
    "transformers>=5.3.0",
    "yt-dlp",
]

[project.scripts]
youtube-transcript = "main:main"
srt-sentence-json = "srt_sentence_json:main"
